test/Feature/Output/MultipleFreeResolution.c.tmp.klee-out/test000004.pc
array const_arr1[32] : w32 -> w8 = [96 10 252 1 0 0 0 0 240 10 252 1 0 0 0 0 8 10 252 1 0 0 0 0 0 0 0 0 0 0 0 0]
array unnamed[4] : w32 -> w8 = symbolic
(query [(Eq false
             (Ule 4
                  N0:(ReadLSB w32 0 unnamed)))
         (Eq 33294856
             (ReadLSB w64 N1:(Extract w32 0 (Mul w64 8 (SExt w64 N0))) const_arr1))]
        false)
